# mpv-sponsorblock

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  sponsorblock.toml
src/: actions.rs  config.rs  lib.rs  logger.rs  mpv.rs  state.rs  utils.rs  worker.rs
src/api/: segment.rs
src/client/: config.rs  mod.rs  worker.rs
src/event_handler/: mod.rs  sponsorblock_worker.rs
src/events/: end_file.rs  file_loaded.rs  mod.rs  property_change.rs  property_changed.rs  start_file.rs
src/mpv/: error.rs  ffi.rs  format.rs  mod.rs  raw.rs
src/sponsorblock/: action.rs  category.rs  mod.rs  segment.rs
