[package]
name = "mpv-sponsorblock"
version = "2.0.0-alpha.3"
edition = "2021"
authors = ["Kevin Gavrois <kevin@gavrois.fr>"]
description = "MPV plugin that allow you to skip sponsors while watching YouTube videos"
repository = "https://github.com/TheCactusVert/mpv-sponsorblock"
keywords = ["mpv", "libmpv", "sponsorblock"]

[lib]
name = "mpv_sponsorblock"
crate-type = ["cdylib"]      # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
env_logger = "0.10.0"
log = "0.4.19"
#mpv-client = "0.5.0"
#mpv-client = { path = "../mpv-client" }
mpv-client = { git = "https://github.com/TheCactusVert/mpv-client.git" }
regex = "1.9.1"
reqwest = "0.11.18"
serde = "1.0.167"
serde_derive = "1.0.167"
sponsorblock-client = { git = "https://github.com/TheCactusVert/sponsorblock-client.git" }
#sponsorblock-client = { path = "../sponsorblock-client" }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.8"
toml = "0.7.6"
url = { version = "2.4.0", features = ["serde"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
