[package]
name = "mpv-sponsorblock"
version = "2.1.0"
edition = "2021"
authors = ["Kevin Gavrois <kevin@gavrois.fr>"]
description = "MPV plugin that allow you to skip sponsors while watching YouTube videos"
repository = "https://github.com/TheCactusVert/mpv-sponsorblock"
keywords = ["mpv", "libmpv", "sponsorblock"]

[lib]
name = "mpv_sponsorblock"
crate-type = ["cdylib"]      # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
dirs = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
mpv-client = "0.6.2"
#mpv-client = { path = "../mpv-client" }
#mpv-client = { git = "https://github.com/TheCactusVert/mpv-client.git" }
regex = "1.10.2"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_with = "3.5.1"
sponsorblock-client = { git = "https://github.com/TheCactusVert/sponsorblock-client.git" }
#sponsorblock-client = { path = "../sponsorblock-client" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.8"
url = { version = "2.5.0", features = ["serde"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
